--- a/ansible/makefile
+++ b/ansible/makefile
@@ -2,4 +2,7 @@ install:
 	ansible-galaxy install -r requirements.yml
 
 deploy:
-	ansible-playbook -i inventory.ini playbook.yml --ask-vault-pass
+	ansible-playbook -i inventory.ini playbook.yml --tags deploy --ask-vault-pass
+
+datadog:
+	ansible-playbook -i inventory.ini playbook.yml --tags datadog --ask-vault-pass
