--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -1,2 +1,3 @@
-server1 ansible_host=51.250.65.49 ansible_user=mikhotin
-server2 ansible_host=89.169.142.29 ansible_user=mikhotin
+[servers]
+server1 ansible_host=84.201.129.46 ansible_user=mikhotin
+server2 ansible_host=51.250.76.74 ansible_user=mikhotin
