--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -1,3 +1,3 @@
 [servers]
-server1 ansible_host=84.201.129.46 ansible_user=mikhotin
-server2 ansible_host=51.250.76.74 ansible_user=mikhotin
+server1 ansible_host=51.250.2.238 ansible_user=ubuntu
+server2 ansible_host=89.169.138.251 ansible_user=ubuntu
