--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -20,7 +20,7 @@
           - python3-pip
           - virtualenv
           - python3-setuptools
-        state: latest
+        state: present
         update_cache: true
 
     - name: Add Docker GPG apt Key
@@ -36,7 +36,7 @@
     - name: Update apt and install docker-ce
       apt:
         name: docker-ce
-        state: latest
+        state: present
         update_cache: true
 
     - name: Install Docker Module for Python
